# Azure-triangle-time-optimizer

./: README.md  model_params.json  pyproject.toml
app/: api.py  cli.py
azure/: data_pipeline.md  deployment.md
data/: tasks_logged.csv
data/samples/: example_tasks.csv
notebooks/: 01_model_validation.ipynb
src/triangle_time/: config.py  data_io.py  schema.py  training.py  triangle_model.py
src/triangle_time_optimizer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
